<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".views.NewsCountryActivity">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_margin_normal"
        android:textColor="@color/white"
        android:text="@string/change_news_language"
        android:textSize="@dimen/header_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_margin_normal"
        app:layout_constraintTop_toBottomOf="@id/tv_header">

        <RadioButton
            android:id="@+id/in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_margin_medium"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/indonesia"/>

        <RadioButton
            android:id="@+id/en_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/english"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>