<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout_news"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:padding="@dimen/padding_margin_normal">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_img_news"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_img_size"
        app:cardCornerRadius="@dimen/news_corner_radius"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_img_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_margin_normal"
        android:text="@string/title_placeholder"
        android:textSize="@dimen/header_title_size"
        android:textStyle="bold"
        android:minLines="2"
        android:maxLines="2"
        android:textColor="@color/white"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/cv_img_news"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_news_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_margin_medium"
        android:text="@string/source_placeholder"
        android:textSize="@dimen/text_normal_size"
        android:textColor="@color/base_color"
        app:layout_constraintTop_toBottomOf="@id/tv_news_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_news_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_margin_small"
        android:layout_marginTop="@dimen/padding_margin_medium"
        android:text="@string/time_placeholder"
        android:textSize="@dimen/text_normal_size"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/tv_news_title"
        app:layout_constraintStart_toEndOf="@id/tv_news_source" />

</androidx.constraintlayout.widget.ConstraintLayout>